# cdl

./: .gitignore  CMakeLists.txt  Get Started with CDL.ipynb  MANIFEST.in  README.md  bind.cpp  condorcet_domain.cpp  condorcet_domain.h  get_started.py  install.sh  main.cpp  pyproject.toml  setup.py  use_cdl.py  utils.cpp  utils.h
algorithms/: CMakeLists.txt  build.sh
algorithms/benckmarking/: a3c.py  dqn.py  dqn_ray.py  es.py  ga.py  game.py  phc.py  ppo.py  pso.py  sa.py  sat_solver.py
algorithms/benckmarking/hpc/: a3c.sh  es.sh  ga.sh  ppo.sh  pso.sh  qdn.sh
algorithms/include/: mcts.h
algorithms/mcts/: CMakeLists.txt
algorithms/mcts/src/: mcts.cpp
algorithms/src/: main.cpp  mcts.cpp
bind/: CMakeLists.txt  Get Started with CDL.ipynb  bind.cpp  conda_install.sh  get_started.py  install.sh  setup.py  soren_install.sh  trs.plk  windows_install.sh
core/: CMakeLists.txt  build.sh
core/include/: condorcet_domain.h  forbidden_permutation.h  utils.h  wrapper.h
core/src/: condorcet_domain.cpp  forbidden_permutation.cpp  main.cpp  utils.cpp  wrapper.cpp
headers/: utils.h
hpc/: calculate_sizes.sh  clear.sh  complete_search.sh  form_clusters.sh  get_results.sh  parallel_search.sh
hpc/1N3_2N3/: calculate_sizes.sh  clear.sh  complete_search.sh  isomorphic_cds.sh  parallel_search.sh
hpc/1N3_3N1/: calculate_sizes.sh  complete_search.sh  parallel_search.sh
hpc/2N1_2N3/: calculate_sizes.sh  complete_search.sh  parallel_search.sh
hpc/2N1_2N3/python/: complete_search.py  parallel_search.py  tools.py  utils.py
hpc/4rules/: calculate_sizes.sh  complete_search.sh  parallel_search.sh
hpc/5x_abundance/: calculate_sizes.sh  clear.sh  complete_search.sh  parallel_search.sh
hpc/dfs/: calculate_sizes.sh  clear.sh  complete_search.sh  parallel_search.sh
hpc/es/: calculate_sizes.sh  clear.sh  complete_search.sh  parallel_search.sh
hpc/exceptions/: calculate_sizes.sh  complete_search.sh  parallel_search.sh
hpc/maximum_width/: calculate_sizes.sh  clear.sh  complete_search.sh  get_results.sh  parallel_search.sh
hpc/rsdfs/: calculate_sizes.sh  clear.sh  complete_search.sh  parallel_search.sh
include/: condorcet_domain.h  utils.h
kebnekaise/: complete_search.sh  get_results.sh  parallel_search.sh  submit-single
orderly/: complete_search.py  examine.py  latex.py  parallel_search.py  uplift.py  utils.py
python/: README.md  calculate_sizes.py  complete_search.py  complete_search.sh  form_clusters.py  get_results.py  get_results.sh  isomorphic_cds.py  parallel_search.py  parallel_search.sh  run.sh  tools.py  utils.py
python/DFS/: complete_search.py  parallel_search.py  tools.py  utils.py
python/ES/: complete_search.py  parallel_search.py  tools.py  utils.py
python/PRS/: complete_search.py  utils.py
python/RSDFS/: calculate_sizes.py  complete_search.py  parallel_search.py  tools.py  utils.py
python/databases/: .gitattributes  database.py  database.sh  database_4.py  database_4.sh  database_5.pkl  database_5.py  database_5.sh  test.ipynb
python/notebooks/: Dual Triples.ipynb  Prioritised Restriction Search.ipynb  Properites of Fishburn domains.ipynb
python/results/: 16_2N3_2N1_1N3_3N1.txt
python/scripts/: complete_search.sh  get_results.sh  parallel_search.sh
src/: condorcet_domain.cpp  main.cpp  utils.cpp
tools/: CMakeLists.txt  build.sh  is_domain_maximal.py  main.cpp  process_mucds.py  tools.cpp
tools/include/: tools.h
tools/median_graph/: alternative.py  connected.py  core.py  diameter.py  dual.py  fast_connected.py  fast_diameter.py  non1n33n1.py  utils.py
tools/src/: main.cpp  tools.cpp
tutorials/: Test forbidden permutation on k=4.ipynb  Test forbidden permutation on k=5.ipynb
utils/: functions.py  process_mucds.py
