[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "condorcet-domain"
version = "1.3.2"
dependencies = []

requires-python = ">=3.8"
authors = [
  {name = "Dr Bei Zhou", email = "bei.zhou@imperial.ac.uk"},
]
description = "CDL: A fast and flexible library for the study of permutation sets with structural restrictions"
license = {file = "license"}
readme = "README.md"

[project.urls]
Documentation = "https://arxiv.org/pdf/2309.06306"
Repository = "https://github.com/sagebei/cdl"

[tool.cibuildwheel]
